<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#fff">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/android"
            android:gravity="center"/>
        <TextView
            android:id="@+id/autor"
            android:text="@string/autor"
            android:textSize="25sp"
            android:textColor="#009688"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/exam"
            android:text="@string/exam"
            android:textSize="18sp"
            android:textColor="#CDDC39"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/grupo"
            android:text="@string/grupo"
            android:textSize="18sp"
            android:textColor="#CDDC39"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_fileName="hongo.json"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"/>




    </androidx.appcompat.widget.LinearLayoutCompat>




</RelativeLayout>